# era

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: main.cpp
src/era/: base64.cpp  base64.hpp  bech32.cpp  bech32.hpp  crypto.cpp  crypto.hpp  format.cpp  format.hpp  identity.cpp  identity.hpp  keys.cpp  keys.hpp  recipient.cpp  recipient.hpp
